--- a/src/app/add-edit-tally/add-edit-tally.component.scss
+++ b/src/app/add-edit-tally/add-edit-tally.component.scss
@@ -21,6 +21,10 @@
                 display: block;
             }
         }
+
+        .history{
+            margin-bottom: 30px;
+        }
     }
     .clr-row {
         margin-bottom: 20px;
