--- a/src/app/tally/tally.component.scss
+++ b/src/app/tally/tally.component.scss
@@ -18,6 +18,16 @@
     h4 {
         margin-top: 0;
     }
+
+    &.tally-progress{
+        background: #fff;
+        padding: 0.5rem 0;
+        border: 1px solid #e6e6e6;
+
+        .progress-meter {
+            height: 4px;
+        }
+    }
 }
 
 h3.modal-title::first-letter {
