--- a/src/app/add-edit-tally/add-edit-tally.component.html
+++ b/src/app/add-edit-tally/add-edit-tally.component.html
@@ -11,8 +11,8 @@
             <form clrForm class="clr-row">
                 <div class="clr-col-12">
                     <clr-input-container>
-                        <label for="name">Titel</label>
-                        <input clrInput type="text" [(ngModel)]="tally.name" name="name" id="name"
+                        <label for="title">Titel</label>
+                        <input clrInput type="text" [(ngModel)]="tally.title" name="title" id="title"
                             required />
                         <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
@@ -78,19 +78,24 @@
 
                     <div class="clr-col-12 history">
                         <h4>Historik</h4>
-                        <clr-datagrid>
-                            <clr-dg-column>Datum</clr-dg-column>
-                            <clr-dg-column>Värde</clr-dg-column>
-                
-                
-                            <clr-dg-row *clrDgItems="let history of tally.getHistory()">
-                                <clr-dg-cell>{{ history.date | date: 'yyyy-MM-dd'}}</clr-dg-cell>
-                                <clr-dg-cell>{{ history.value }} / {{ tally.getGoal() }}</clr-dg-cell>
-                            </clr-dg-row>
-                
-                            <clr-dg-footer><span class="pull-left">{{ tally.getHistory().length }} dagars historik</span><span *ngIf="tally.getHistory().length" class="pull-right" (click)="cleanHistory()">Töm historik</span>
-                            </clr-dg-footer>
-                        </clr-datagrid>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Datum</th>
+                                    <th>Värde</th>
+                                    <th>Mål uppnått</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let history of tally.getHistory()">
+                                    <td>{{ history.date | date: 'yyyy-MM-dd'}}</td>
+                                    <td>{{ history.value }} / {{ tally.getGoal() }}</td>
+                                    <td><clr-icon class="warning" shape="times" *ngIf="history.value < tally.getGoal()"></clr-icon>
+                                        <clr-icon class="success" shape="check" *ngIf="history.value >= tally.getGoal()"></clr-icon> {{
+                                        history.value >= tally.getGoal() ? ' Ja' : 'Nej' }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 
 
