--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,3 +54,11 @@ a, a:visited, a:hover, a:active {
     color: #00364d;
     text-decoration: none;
 }
+
+.warning {
+    color: $dangerColor;
+}
+
+.success {
+    color: $successColor;
+}
