--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -79,7 +79,7 @@
 <div class="clr-row">
     <div class="clr-col-12">
         <h4>Historik</h4>
-        
+
         <table class="table">
             <thead>
                 <tr>
@@ -92,9 +92,11 @@
                 <tr *ngFor="let history of tally.getHistory()">
                     <td>{{ history.date | date: 'yyyy-MM-dd'}}</td>
                     <td>{{ history.value }} / {{ tally.getGoal() }}</td>
-                    <td><clr-icon class="warning" shape="times" *ngIf="history.value < tally.getGoal()"></clr-icon>
+                    <td>
+                        <clr-icon class="warning" shape="times" *ngIf="history.value < tally.getGoal()"></clr-icon>
                         <clr-icon class="success" shape="check" *ngIf="history.value >= tally.getGoal()"></clr-icon> {{
-                        history.value >= tally.getGoal() ? ' Ja' : 'Nej' }}</td>
+                        history.value >= tally.getGoal() ? ' Ja' : 'Nej' }}
+                    </td>
                 </tr>
             </tbody>
             <tfoot>
@@ -102,13 +104,23 @@
                     <td colspan="3">
                         <table>
                             <tr>
-                                <td width="300" (click)="editHistory()"><small>Redigera historik</small></td>
-                                <td width="300" (click)="cleanHistory()"><small>Töm historik</small></td>
+                                <td width="300">
+                                    <small *ngIf="tally.getHistory().length < 1">
+                                        Redigera historik
+                                    </small>
+                                    <small *ngIf="tally.getHistory().length > 0">
+                                        <a routerLink="/history/edit/{{tally.getUuid() }}">Redigera historik</a>
+                                    </small>
+                                </td>
+                                <td width="300">
+                                    <small *ngIf="tally.getHistory().length > 0" (click)="cleanHistory()">Töm historik</small>
+                                    <small *ngIf="tally.getHistory().length < 1">Töm historik</small>
+                                </td>
                             </tr>
                         </table>
                     </td>
                 </tr>
-              </tfoot>
+            </tfoot>
         </table>
     </div>
 </div>
