--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-@import './assets/styles/variables';
+@import "./assets/styles/variables";
 
-.pull-left{
+.pull-left {
     float: left;
 }
 
-.pull-right{
+.pull-right {
     float: right;
 }
-
 
 h1 {
     margin-top: 5px;
@@ -18,8 +17,6 @@ hr {
     border-top: 1px solid #e8e8e8;
     margin: 20px 0;
 }
-
-
 
 span.status-badge {
     padding: 8px 15px;
@@ -32,7 +29,7 @@ span.status-badge {
         display: block;
         text-align: center;
     }
-    
+
     &.success {
         border: 1px solid $successColor;
         color: $successColor;
@@ -50,7 +47,10 @@ span.status-badge {
     width: 100%;
 }
 
-a, a:visited, a:hover, a:active {
+a,
+a:visited,
+a:hover,
+a:active {
     color: #00364d;
     text-decoration: none;
 }
