--- a/src/app/add-edit-tally/add-edit-tally.component.html
+++ b/src/app/add-edit-tally/add-edit-tally.component.html
@@ -77,7 +77,8 @@
 
                 <div class="clr-col-12 history">
                     <h4>Historik</h4>
-                    <table class="table">
+                    <small *ngIf="tally.getHistory().length < 1">Det finns ingen historik för denna räknare</small>
+                    <table class="table" *ngIf="tally.getHistory().length > 0">
                         <thead>
                             <tr>
                                 <th>Datum</th>
@@ -98,15 +99,30 @@
                                 </td>
                             </tr>
                         </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="3">
+                                    <table>
+                                        <tr>
+                                            <td width="300">
+                                                <small *ngIf="tally.getHistory().length < 1">
+                                                    Redigera historik
+                                                </small>
+                                                <small *ngIf="tally.getHistory().length > 0">
+                                                    <a routerLink="/history/edit/{{tally.getUuid() }}">Redigera historik</a>
+                                                </small>
+                                            </td>
+                                            <td width="300">
+                                                <small class="link-color" *ngIf="tally.getHistory().length > 0" (click)="cleanHistory()">Töm historik</small>
+                                                <small class="link-color" *ngIf="tally.getHistory().length < 1">Töm historik</small>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tfoot>
                     </table>
                 </div>
-
-                <div class="clr-col-12 clear-history">
-                    <small *ngIf="tally.getHistory().length < 1" class="btn btn-sm btn-link">Radera historik</small>
-                    <button *ngIf="tally.getHistory().length > 0" class="btn block btn-danger-outline"
-                        (click)="cleanHistory()">Radera historik</button>
-                </div>
-
 
                 <div class="clr-col-12">
                     <span class="success status-badge block" *ngIf="tally.getActive()"
