--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -12,8 +12,17 @@
                     </div>
                 </div>
                 <div class="card-block">
-                    <div class="card-title">
-                        Dynamiskt mål: 
+                    <div class="clr-row">
+                        <div class="clr-col-6">
+                            <div class="card-title" *ngIf="tally.getResetEveryday()">
+                                {{ tally.getHistory().length }} dagars historik
+                            </div>
+                        </div>
+                        <div class="clr-col-6">
+                            <div class="card-title pull-right">
+                                 &nbsp; {{ tally.getLastTouched() | timeago }}
+                            </div>
+                        </div>
                     </div>
                     <div class="card-text">
                         <div aria-hidden="true" class="clr-row progress-status-text">
@@ -22,23 +31,21 @@
                                     tally.getGoal() }} </span> </div>
                         </div>
                         <div class="progress-static" [class.success]="tally.getValue() >= tally.getGoal()">
-                            <div class="progress-meter" [attr.data-value]="calculatePercentage(tally) < 100 ? calculatePercentage(tally) : 100"></div>
+                            <div class="progress-meter"
+                                [attr.data-value]="calculatePercentage(tally) < 100 ? calculatePercentage(tally) : 100">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer">
                     <div class="clr-row">
-                        <div class="clr-col-4">
-                            <button class="btn btn-success-outline pull-left increase" [disabled]="!tally.getActive()"
-                                (click)="increase(tally)">Öka</button>
-                        </div>
-                        <div class="clr-col-4 timeago"><small>
-                                <clr-icon shape="clock"></clr-icon> &nbsp; {{ tally.getLastTouched() | timeago }}
-                            </small>
-                        </div>
-                        <div class="clr-col-4">
-                            <button class="btn btn-danger-outline pull-right decrese" [disabled]="!tally.getActive()"
+                        <div class="clr-col-6">
+                            <button class="btn btn-danger-outline block pull-right decrese" [disabled]="!tally.getActive()"
                                 (click)="decrese(tally)">Minska</button>
+                        </div>
+                        <div class="clr-col-6">
+                            <button class="btn btn-success-outline block pull-left increase" [disabled]="!tally.getActive()"
+                                (click)="increase(tally)">Öka</button>                            
                         </div>
                     </div>
                 </div>
@@ -75,7 +82,7 @@
             <div class="clr-control-container">
                 <div class="clr-toggle-wrapper">
                     <input type="checkbox" id="toggle1" name="toggle-basic" [(ngModel)]="showAll"
-                    (change)="eventCheck($event)" class="clr-toggle" />
+                        (change)="eventCheck($event)" class="clr-toggle" />
                     <label for="toggle1">{{ showAll ? 'Dölj inaktiva' : 'Visa inaktiva' }}</label>
                 </div>
             </div>
