--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -69,7 +69,8 @@
     <div class="clr-col-12">
         <h4>Historik</h4>
 
-        <table class="table">
+        <small *ngIf="tally.getHistory().length < 1">Det finns ingen historik för denna räknare</small>
+        <table class="table" *ngIf="tally.getHistory().length > 0">
             <thead>
                 <tr>
                     <th>Datum</th>
@@ -102,8 +103,9 @@
                                     </small>
                                 </td>
                                 <td width="300">
-                                    <small *ngIf="tally.getHistory().length > 0" (click)="cleanHistory()">Töm historik</small>
-                                    <small *ngIf="tally.getHistory().length < 1">Töm historik</small>
+                                    <small class="link-color" *ngIf="tally.getHistory().length > 0"
+                                        (click)="cleanHistory()">Töm historik</small>
+                                    <small class="link-color" *ngIf="tally.getHistory().length < 1">Töm historik</small>
                                 </td>
                             </tr>
                         </table>
@@ -136,4 +138,3 @@
 
 <app-modal [modalData]="cleanHistoryModalData" (parentEvent)="cleanHistoryConfirmed()"></app-modal>
 <app-modal [modalData]="deleteModalData" (parentEvent)="deleteConfirmed()"></app-modal>
-<app-modal [modalData]="toggleActivityModalData" (parentEvent)="toggleActiveConfirmed()"></app-modal>
