--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,3 +77,7 @@ a:active {
         color: $dangerColor;
     }
 }
+
+header.header-6 {
+    background-image: linear-gradient(to right,#00364d , #006d9c);
+}
